build_phase2.log

> Configure project :
Project : => no module-info.java found

> Task :compileJava FAILED
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:26: error: cannot find symbol
        if (adminNameLabel != null) {
            ^
  symbol:   variable adminNameLabel
  location: class AdminPanelController
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:27: error: cannot find symbol
            adminNameLabel.setText("Administrator");
            ^
  symbol:   variable adminNameLabel
  location: class AdminPanelController
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:31: error: cannot find symbol
        if (logoutButton != null) {
            ^
  symbol:   variable logoutButton
  location: class AdminPanelController
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:32: error: cannot find symbol
            logoutButton.setOnAction(event -> handleLogout());
            ^
  symbol:   variable logoutButton
  location: class AdminPanelController
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:36: error: cannot find symbol
        if (adminTabPane != null) {
            ^
  symbol:   variable adminTabPane
  location: class AdminPanelController
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:37: error: cannot find symbol
            adminTabPane.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> {
            ^
  symbol:   variable adminTabPane
  location: class AdminPanelController
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:63: error: cannot find symbol
            Stage stage = (Stage) logoutButton.getScene().getWindow();
                                  ^
  symbol:   variable logoutButton
  location: class AdminPanelController
Note: C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\services\SyncService.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors

[Incubating] Problems report is available at: file:///C:/Users/Rafsan%20Riasat/AndroidStudioProjects/VisiBoard/visiboard_pc/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\services\SyncService.java uses unchecked or unsafe operations.
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:26: error: cannot find symbol
          if (adminNameLabel != null) {
              ^
    symbol:   variable adminNameLabel
    location: class AdminPanelController
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:27: error: cannot find symbol
              adminNameLabel.setText("Administrator");
              ^
    symbol:   variable adminNameLabel
    location: class AdminPanelController
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:31: error: cannot find symbol
          if (logoutButton != null) {
              ^
    symbol:   variable logoutButton
    location: class AdminPanelController
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:32: error: cannot find symbol
              logoutButton.setOnAction(event -> handleLogout());
              ^
    symbol:   variable logoutButton
    location: class AdminPanelController
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:36: error: cannot find symbol
          if (adminTabPane != null) {
              ^
    symbol:   variable adminTabPane
    location: class AdminPanelController
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:37: error: cannot find symbol
              adminTabPane.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> {
              ^
    symbol:   variable adminTabPane
    location: class AdminPanelController
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\AdminPanelController.java:63: error: cannot find symbol
              Stage stage = (Stage) logoutButton.getScene().getWindow();
                                    ^
    symbol:   variable logoutButton
    location: class AdminPanelController
  Note: Recompile with -Xlint:unchecked for details.
  7 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
1 actionable task: 1 executed
